<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/menu_select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deselect_all"
        android:icon="@drawable/ic_deselect_all"
        android:title="@string/menu_deselect_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_webview"
        android:icon="@drawable/ic_web"
        android:title="@string/menu_open_webview"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>